src/test/ui/issues/issue-50264-inner-deref-trait/result-deref.rs
#![feature(inner_deref)]

fn main() {
    let _result = &Ok(42).deref();
//~^ ERROR no method named `deref` found
}
